force-app/main/default/objects/ucinn_portal_Zone_Membership__c/ucinn_portal_Zone_Membership__c.object-meta.xml
<CustomObject>
    <label>Zone Membership</label>
    <nameField>
        <label>Zone Membership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zone Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>