force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Bio_Description__c.field-meta.xml
<CustomField>
    <fullName>Bio_Description__c</fullName>
    <label>Bio Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>