force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Board_Member_Title__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_Title__c</fullName>
    <label>Board Member Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>