force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Zone Memberships</relationshipLabel>
    <relationshipName>ucinn_portal_Zone_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>