force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Zone Memberships</relationshipLabel>
    <relationshipName>ucinn_portal_Zone_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>