force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Is_Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Board Member</label>
    <type>Checkbox</type>
</CustomField>