force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Is_On_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Newsletter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is On Newsletter</label>
    <type>Checkbox</type>
</CustomField>