force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Is_Show_On_Directory__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_On_Directory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Show On Directory</label>
    <type>Checkbox</type>
</CustomField>