force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <referenceTo>ucinn_portal_Zone__c</referenceTo>
    <relationshipLabel>Zone Memberships</relationshipLabel>
    <relationshipName>ucinn_portal_Zone_Zone_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>