force-app/main/default/objects/ucinn_portal_Zone_Membership__c/fields/Zone_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Zone_Permission_Set__c</fullName>
    <label>Zone Permission Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit Newsletter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>